src/model/movement/tests/snapshots/cli_chess__model__movement__tests__test_movement_case3.snap
---
source: src/model/movement/tests/mod.rs
expression: movement

---
Some(
    Movement {
        class: None,
        destination: Position {
            rank: _7,
            file: A,
        },
    },
)
