src/model/movement/tests/snapshots/cli_chess__model__movement__tests__test_movement_case5.snap
---
source: src/model/movement/tests/mod.rs
expression: movement

---
Some(
    Movement {
        class: Some(
            Knight,
        ),
        destination: Position {
            rank: _1,
            file: D,
        },
    },
)
